@@ -14,6 +14,7 @@
         * Deleted "--disable-root-actions" from Coverity Scan target
         * Added deletion of /tmp/pqact_test.conf before creation due to /tmp having the "restricted
           deletion" bit set
+        * Deleted use of CodeQL in OnPush.yml in favor of using Coverity Scan because it's better
 
 6.14.3  2022-12-22T13:34:03-0700
     Documentation:
